--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -15,5 +15,5 @@ resources:
   - 06-agent-config.yaml
   - 06-agent-daemonset.yaml
   # Deploy base
-# Force report update Tue Feb 10 15:26:46 CET 2026 - Check v6 result
+# Force report update Tue Feb 10 18:00:00 CET 2026 - Check Dashboard Logs V3
 
