chore(soc): force restart core services to apply new certificates

--- a/core/b2b/core-services/soc/04-manager.yaml
+++ b/core/b2b/core-services/soc/04-manager.yaml
@@ -16,6 +16,8 @@ spec:
     metadata:
       labels:
         app: wazuh-manager
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-11T09:00:00Z"
     spec:
       nodeSelector:
         kubernetes.io/hostname: k8-node-20
