--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -15,6 +15,8 @@ spec:
     metadata:
       labels:
         app: wazuh-indexer
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-11T09:00:00Z"
     spec:
       nodeSelector:
         kubernetes.io/hostname: k8-node-20
