--- a/core/b2b/core-services/soc/05-dashboard.yaml
+++ b/core/b2b/core-services/soc/05-dashboard.yaml
@@ -14,6 +14,8 @@ spec:
     metadata:
       labels:
         app: wazuh-dashboard
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-11T09:00:00Z"
     spec:
       containers:
         - name: wazuh-dashboard
