--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -16,4 +16,5 @@ resources:
   - 06-agent-daemonset.yaml
   # Deploy base
 # Force report update Tue Feb 10 18:00:00 CET 2026 - Check Dashboard Logs V3
+# Force restart core services Tue Feb 11 09:00:00 CET 2026 - Apply new certificates
 
