--- a/core/b2b/core-services/soc/05-dashboard.yaml
+++ b/core/b2b/core-services/soc/05-dashboard.yaml
@@ -15,7 +15,7 @@ spec:
       labels:
         app: wazuh-dashboard
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2026-02-11T09:00:00Z"
+        kubectl.kubernetes.io/restartedAt: "2026-02-11T09:30:00Z"
     spec:
       containers:
         - name: wazuh-dashboard
@@ -81,6 +81,7 @@ data:
     server.port: 5601
     opensearch.hosts: https://wazuh-indexer:9200
     opensearch.ssl.verificationMode: certificate
+    opensearch.ssl.certificateAuthorities: ["/usr/share/wazuh-dashboard/certs/root-ca.pem"]
     opensearch.requestHeadersWhitelist: [ authorization, securitytenant ]
     opensearch_security.multitenancy.enabled: true
     opensearch_security.readonly_mode.roles: [ kibana_read_only ]
