--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - 05-dashboard.yaml
   - 06-agent-config.yaml
   - 06-agent-daemonset.yaml
+  - 99-security-init-job.yaml
   # Deploy base
 # Force report update Tue Feb 10 18:00:00 CET 2026 - Check Dashboard Logs V3
 # Force restart core services Tue Feb 11 09:45:00 CET 2026 - Sync Certs
