--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -12,5 +12,6 @@ resources:
   - itop-service.yaml
   - fix-db-permissions-job.yaml
   - ingress.yaml
+  #New redeploy Tue Feb 11 10:00:00 CET 2026
 
 
