--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -16,7 +16,8 @@ resources:
   - 06-agent-daemonset.yaml
   - 99-security-init-job-v2.yaml
   # Deploy base
-# Force report update Tue Feb 10 18:00:00 CET 2026 - Check Dashboard Logs V3
+# Force report check security init completion
+  # Force report update Tue Feb 10 18:00:00 CET 2026 - Check Dashboard Logs V3
 # Force restart core services Tue Feb 11 09:45:00 CET 2026 - Sync Certs
 # Force verification Tue Feb 11 09:50:00 CET 2026 - Final Check
 
