--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -4,20 +4,17 @@ namespace: soc
 
 resources:
   - namespace.yaml
-  - 01-security-job.yaml
   - wazuh-indexer-pv.yaml
   - wazuh-indexer-pvc.yaml
   - wazuh-manager-pv.yaml
   - wazuh-manager-pvc.yaml
+  - 00-wazuh-certs-generator-v8.yaml
   - 03-indexer.yaml
   - 04-manager.yaml
   - 05-dashboard.yaml
   - 06-agent-config.yaml
   - 06-agent-daemonset.yaml
-  - 99-security-init-job-v4.yaml
+  - 99-security-init-job-v5.yaml
   # Deploy base
-# Force report check security init completion
-  # Force report update Tue Feb 10 18:00:00 CET 2026 - Check Dashboard Logs V3
-# Force restart core services Tue Feb 11 09:45:00 CET 2026 - Sync Certs
-# Force verification Tue Feb 11 09:50:00 CET 2026 - Final Check
 
+# Force restart core services Tue Feb 11 10:30:00 CET 2026 - Official Certs V8
