fix(soc): correct wazuh indexer admin dn and security init v7

--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -90,7 +90,7 @@ spec:
             - name: PLUGINS_SECURITY_SYSTEM_INDICES_INDICES
               value: ".opendistro-alerting-config,.opendistro-alerting-alert*,.opendistro-ism-config,.opendistro-dism-config,.opendistro-job-scheduler-lock"
             - name: WAZUH_INDEXER_ADMIN_DN
-              value: "CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US"
+              value: "CN=admin,O=Wazuh,L=California,C=US"
             - name: WAZUH_INDEXER_CHECK_CERTIFICATES
               value: "false"
           volumeMounts:
