--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
   - 05-dashboard.yaml
   - 06-agent-config.yaml
   - 06-agent-daemonset.yaml
-  - 99-security-init-job-v6.yaml
+  - 99-security-init-job-v7.yaml
   # Deploy base
 
-# Force restart core services Tue Feb 11 10:45:00 CET 2026 - Alpine Certs Fix
+# Force restart core services Tue Feb 11 11:00:00 CET 2026 - Security Init V7
