--- a/core/b2b/core-services/soc/99-security-init-job-v7.yaml
+++ b/core/b2b/core-services/soc/99-security-init-job-v7.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: wazuh-security-init-v6
+  name: wazuh-security-init-v7
   namespace: soc
 spec:
   ttlSecondsAfterFinished: 600
@@ -24,7 +24,10 @@ spec:
               until curl -s -k https://wazuh-indexer.soc.svc:9200; do sleep 5; done
               
               echo "Running securityadmin.sh..."
-              # Use -h wazuh-indexer.soc.svc to match cert SAN
+              # Fix: Use explicit cert path and add truststore if needed (but CA should suffice)
+              # The error 'PKIX path building failed' often means the client doesn't trust the server cert.
+              # We explicitly provide -cacert which should match the CA that signed the server cert.
+              
               /usr/share/wazuh-indexer/plugins/opensearch-security/tools/securityadmin.sh \
                 -cd /usr/share/wazuh-indexer/plugins/opensearch-security/securityconfig/ \
                 -icl -nhnv \
