--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -17,4 +17,4 @@ resources:
   - 99-security-init-job-v7.yaml
   # Deploy base
 
-# Force restart core services Tue Feb 11 11:00:00 CET 2026 - Security Init V7
+# Force restart core services Tue Feb 11 11:15:00 CET 2026 - Security Init V7 Retry
