--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -18,3 +18,4 @@ resources:
   # Deploy base
 
 # Force restart core services Tue Feb 11 11:15:00 CET 2026 - Security Init V7 Retry
+# Force CD run v8 verification
