--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -14,8 +14,8 @@ resources:
   - 05-dashboard.yaml
   - 06-agent-config.yaml
   - 06-agent-daemonset.yaml
-  - 99-security-init-job-v8.yaml
+  - 99-security-init-job-v10.yaml
   # Deploy base
 
-# Force restart core services Tue Feb 11 11:15:00 CET 2026 - Security Init V7 Retry
-# Force CD run v8 verification
+# Force restart core services Tue Feb 11 11:30:00 CET 2026 - Security Init V10 Fix
+# Force CD run v10 verification
