chore(soc): force deployment to check status

--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -18,4 +18,4 @@ resources:
   # Deploy base
 
 # Force restart core services Tue Feb 11 11:30:00 CET 2026 - Security Init V10 Fix
-# Force CD run v10 verification
+# Force CD run v10 verification - Status Check
