--- a/core/b2b/core-services/soc/99-security-init.yaml
+++ b/core/b2b/core-services/soc/99-security-init.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: wazuh-security-init-v10
+  name: wazuh-security-init
   namespace: soc
 spec:
   ttlSecondsAfterFinished: 600
@@ -20,7 +20,7 @@ spec:
               export JAVA_HOME=/usr/share/wazuh-indexer/jdk
               export PATH=$JAVA_HOME/bin:$PATH
               
-              echo ">>> Wazuh Security Init v10 <<<"
+              echo ">>> Wazuh Security Init <<<"
               echo "Checking admin cert..."
               ls -l /usr/share/wazuh-indexer/config/certs/admin.pem
               
