--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -8,13 +8,13 @@ resources:
   - wazuh-indexer-pvc.yaml
   - wazuh-manager-pv.yaml
   - wazuh-manager-pvc.yaml
-  - 00-wazuh-certs-generator-v9.yaml
+  - 00-wazuh-certs-generator.yaml
   - 03-indexer.yaml
   - 04-manager.yaml
   - 05-dashboard.yaml
   - 06-agent-config.yaml
   - 06-agent-daemonset.yaml
-  - 99-security-init-job-v10.yaml
+  - 99-security-init.yaml
   # Deploy base
 
 # Force restart core services Tue Feb 11 11:30:00 CET 2026 - Security Init V10 Fix
