--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -18,4 +18,5 @@ resources:
   # Deploy base
 
 # Force restart core services Tue Feb 11 11:30:00 CET 2026 - Security Init V10 Fix
+# Official Wazuh Certs Tool Implementation - Force Deploy
 # Force CD run v10 verification - Status Check
