Deploy new arq infra

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@
 *.backup
 /finops_old/
 /bil/
+
+# Excepciones para Wazuh Certs (Local Deployment)
+!core/b2b/core-services/soc/wazuh-certificates/*.pem
+!core/b2b/core-services/soc/wazuh-certificates/*-key.pem
