--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -68,19 +68,19 @@ spec:
             - name: PLUGINS_SECURITY_SSL_HTTP_ENABLED
               value: "true"
             - name: PLUGINS_SECURITY_SSL_HTTP_PEMKEY_FILEPATH
-              value: "indexer-key.pem"
+              value: "certs/indexer-key.pem"
             - name: PLUGINS_SECURITY_SSL_HTTP_PEMCERT_FILEPATH
-              value: "indexer.pem"
+              value: "certs/indexer.pem"
             - name: PLUGINS_SECURITY_SSL_HTTP_PEMTRUSTEDCAS_FILEPATH
-              value: "root-ca.pem"
+              value: "certs/root-ca.pem"
             - name: PLUGINS_SECURITY_SSL_TRANSPORT_ENABLED
               value: "true"
             - name: PLUGINS_SECURITY_SSL_TRANSPORT_PEMKEY_FILEPATH
-              value: "indexer-key.pem"
+              value: "certs/indexer-key.pem"
             - name: PLUGINS_SECURITY_SSL_TRANSPORT_PEMCERT_FILEPATH
-              value: "indexer.pem"
+              value: "certs/indexer.pem"
             - name: PLUGINS_SECURITY_SSL_TRANSPORT_PEMTRUSTEDCAS_FILEPATH
-              value: "root-ca.pem"
+              value: "certs/root-ca.pem"
             - name: PLUGINS_SECURITY_SSL_TRANSPORT_ENFORCE_HOSTNAME_VERIFICATION
               value: "false"
             - name: PLUGINS_SECURITY_RESTAPI_ROLES_ENABLED
