--- a/core/b2b/core-services/soc/04-manager.yaml
+++ b/core/b2b/core-services/soc/04-manager.yaml
@@ -66,11 +66,11 @@ spec:
               readOnly: true
             - name: certificates
               mountPath: /var/ossec/etc/ssl/server.crt
-              subPath: server.pem
+              subPath: manager.pem
               readOnly: true
             - name: certificates
               mountPath: /var/ossec/etc/ssl/server.key
-              subPath: server.key
+              subPath: manager-key.pem
               readOnly: true
       volumes:
         - name: wazuh-manager-data
