--- a/core/b2b/core-services/soc/05-dashboard.yaml
+++ b/core/b2b/core-services/soc/05-dashboard.yaml
@@ -82,10 +82,9 @@ data:
     opensearch.hosts: https://wazuh-indexer:9200
     opensearch.ssl.verificationMode: certificate
     opensearch.ssl.certificateAuthorities: ["/usr/share/wazuh-dashboard/certs/root-ca.pem"]
-    opensearch.requestHeadersWhitelist: [ authorization, securitytenant ]
-    opensearch_security.multitenancy.enabled: true
-    opensearch_security.readonly_mode.roles: [ kibana_read_only ]
     server.ssl.enabled: false
+    server.ssl.certificate: "/usr/share/wazuh-dashboard/certs/dashboard.pem"
+    server.ssl.key: "/usr/share/wazuh-dashboard/certs/dashboard-key.pem"
 ---
 apiVersion: v1
 kind: Service
