Re deploy Wazuh

--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - wazuh-indexer-pvc.yaml
   - wazuh-manager-pv.yaml
   - wazuh-manager-pvc.yaml
+  - 02-security-init.yaml
   - 03-indexer.yaml
   - 04-manager.yaml
   - 05-dashboard.yaml
