--- a/core/b2b/core-services/soc/02-security-init.yaml
+++ b/core/b2b/core-services/soc/02-security-init.yaml
@@ -31,4 +31,4 @@ spec:
       volumes:
       - name: certificates
         secret:
-          secretName: wazuh-indexer-certs
+          secretName: wazuh-indexer-certs-v3
