--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -105,7 +105,7 @@ spec:
             claimName: wazuh-indexer-pvc-v2
         - name: certificates
           secret:
-            secretName: wazuh-indexer-certs
+            secretName: wazuh-indexer-certs-v3
             defaultMode: 420
 ---
 apiVersion: v1
