--- a/core/b2b/core-services/soc/04-manager.yaml
+++ b/core/b2b/core-services/soc/04-manager.yaml
@@ -78,10 +78,10 @@ spec:
             claimName: wazuh-manager-pvc
         - name: certificates
           secret:
-            secretName: wazuh-manager-certs
+            secretName: wazuh-manager-certs-v3
         - name: auth-certs
           secret:
-            secretName: wazuh-manager-certs
+            secretName: wazuh-manager-certs-v3
 ---
 apiVersion: v1
 kind: Service
