--- a/core/b2b/core-services/soc/05-dashboard.yaml
+++ b/core/b2b/core-services/soc/05-dashboard.yaml
@@ -65,7 +65,7 @@ spec:
       volumes:
         - name: certificates
           secret:
-            secretName: wazuh-dashboard-certs
+            secretName: wazuh-dashboard-certs-v3
         - name: dashboard-conf
           configMap:
             name: wazuh-dashboard-conf
