--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
   - 06-agent-daemonset.yaml
 
 secretGenerator:
-  - name: wazuh-indexer-certs
+  - name: wazuh-indexer-certs-v3
     files:
       - root-ca.pem=wazuh-certificates/root-ca.pem
       - indexer.pem=wazuh-certificates/wazuh-indexer.pem
@@ -26,7 +26,7 @@ secretGenerator:
     options:
       disableNameSuffixHash: true
 
-  - name: wazuh-manager-certs
+  - name: wazuh-manager-certs-v3
     files:
       - root-ca.pem=wazuh-certificates/root-ca.pem
       - manager.pem=wazuh-certificates/wazuh-manager.pem
@@ -36,7 +36,7 @@ secretGenerator:
     options:
       disableNameSuffixHash: true
 
-  - name: wazuh-dashboard-certs
+  - name: wazuh-dashboard-certs-v3
     files:
       - root-ca.pem=wazuh-certificates/root-ca.pem
       - dashboard.pem=wazuh-certificates/wazuh-dashboard.pem
