--- a/core/b2b/core-services/soc/02-security-init.yaml
+++ b/core/b2b/core-services/soc/02-security-init.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: wazuh-security-init
+  name: wazuh-security-init-v17
   namespace: soc
 spec:
   ttlSecondsAfterFinished: 600
