fix(soc): set PLUGINS_SECURITY_AUTHCZ_ADMIN_DN and bump init job to v18

--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -89,6 +89,8 @@ spec:
               value: "true"
             - name: PLUGINS_SECURITY_SYSTEM_INDICES_INDICES
               value: ".opendistro-alerting-config,.opendistro-alerting-alert*,.opendistro-ism-config,.opendistro-dism-config,.opendistro-job-scheduler-lock"
+            - name: PLUGINS_SECURITY_AUTHCZ_ADMIN_DN
+              value: "CN=admin,O=Wazuh,L=California,C=US"
             - name: WAZUH_INDEXER_ADMIN_DN
               value: "CN=admin,O=Wazuh,L=California,C=US"
             - name: WAZUH_INDEXER_CHECK_CERTIFICATES
