--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -43,3 +43,4 @@ secretGenerator:
       - dashboard-key.pem=wazuh-certificates/wazuh-dashboard-key.pem
     options:
       disableNameSuffixHash: true
+# Primera version
